@@ -52,7 +52,7 @@
 #' variables along the sequence (step \code{sMax}).  If the second element is 
 #' \code{NA}, predictors may be added to the model as long as there are twice 
 #' as many observations as predictors.  If only one value is supplied, it is 
-#' used as the last step, with the first step being 0.
+#' recycled.
 #' @param regFun  a function to compute robust linear regressions along the 
 #' sequence (defaults to \code{\link[robustbase]{lmrob}}).
 #' @param regArgs  a list of arguments to be passed to \code{regFun}.
