@@ -85,8 +85,7 @@
   the second element is \code{NA}, predictors may be added
   to the model as long as there are twice as many
   observations as predictors.  If only one value is
-  supplied, it is used as the last step, with the first
-  step being 0.}
+  supplied, it is recycled.}
 
   \item{regFun}{a function to compute robust linear
   regressions along the sequence (defaults to
